--- a/templates/macros/_images.twig
+++ b/templates/macros/_images.twig
@@ -1,22 +1,85 @@
-{% macro srcset(image, outputWidths, aspectRatio) %}
-  {# setup #}
-  {%- set outputWidths = outputWidths | default([480, 736, 980, 1280, 1690]) -%}
-  {%- set srcset = [] -%}
-  {%- set qual = 82 -%}
+{%- macro srcset(image, outputWidths, aspectRatio) -%}
+  {%- spaceless -%}
+    {# setup #}
+    {%- set outputWidths = outputWidths | default([480, 736, 980, 1280, 1690]) -%}
+    {%- set srcset = [] -%}
+    {%- set qual = 82 -%}
 
-  {# if output width is smaller than or equal to the original image width #}
-  {%- for outputWidth in outputWidths -%}
-    {%- if outputWidth <= image.width -%}
-      {%- if aspectRatio -%}
-        {%- set transformOptions = { width: outputWidth, height: outputWidth / aspectRatio, quality: qual } -%}
-      {%- else -%}
-        {%- set transformOptions = { width: outputWidth, quality: qual } -%}
+    {# if output width is smaller than or equal to the original image width #}
+    {%- for outputWidth in outputWidths -%}
+      {%- if outputWidth <= image.width -%}
+        {%- if aspectRatio -%}
+          {%- set transformOptions = { width: outputWidth, height: outputWidth / aspectRatio, quality: qual } -%}
+        {%- else -%}
+          {%- set transformOptions = { width: outputWidth, quality: qual } -%}
+        {%- endif -%}
+
+        {%- set srcset = srcset | merge([image.getUrl(transformOptions) ~ ' ' ~ outputWidth ~ 'w']) -%}
       {%- endif -%}
-
-      {%- set srcset = srcset | merge([image.getUrl(transformOptions) ~ ' ' ~ outputWidth ~ 'w']) -%}
-    {%- endif -%}
-  {%- endfor -%}
-
+    {%- endfor -%}
+  {%- endspaceless -%}
+  
   {# output srcset #}
   {{- srcset | join(', ') -}}
-{% endmacro %}
+{%- endmacro -%}
+
+{%- macro responsivePicture(image, alt = null) -%}
+  {%- spaceless -%}
+    {% set finalImageArray = [] %}
+    {% set finalImageArrayWebP = [] %}
+    {% set sourceWidths = image.variantSourceWidths %}
+    {% set sourceImages = image.optimizedImageUrls %}
+    {% set sourceImagesWebP = image.optimizedWebPImageUrls %}
+
+    {% set newSourceWidths = [] %}
+    {% for key, width in sourceWidths %}
+      {% set newSourceWidths = newSourceWidths|merge({(key): 'width_' ~ width}) %}
+    {% endfor %}
+
+    {% for width, url in sourceImages %}
+        
+        {% set widthKey = newSourceWidths[loop.index0] %}
+        {% set newImage = [{'width': width, 'url': url}] %}
+        {% if finalImageArray[widthKey] is defined %}
+            {% set subImage = finalImageArray[widthKey]|merge(newImage) %}
+        {% else %}
+            {% set subImage = newImage %}
+        {% endif %}
+        {% set finalImageArray = finalImageArray|merge({(widthKey): subImage}) %}
+        
+    {% endfor %}
+
+    {% for width, url in sourceImagesWebP %}
+        
+        {% set widthKey = newSourceWidths[loop.index0] %}
+        {% set newImage = [{'width': width, 'url': url}] %}
+        {% if finalImageArrayWebP[widthKey] is defined %}
+            {% set subImage = finalImageArrayWebP[widthKey]|merge(newImage) %}
+        {% else %}
+            {% set subImage = newImage %}
+        {% endif %}
+        {% set finalImageArrayWebP = finalImageArrayWebP|merge({(widthKey): subImage}) %}
+        
+    {% endfor %}
+
+    {% set lastImage = finalImageArray|last %}
+  {%- endspaceless -%}
+
+  <picture>
+    {% for width, sizes in finalImageArrayWebP %}
+    <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
+          media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+          data-sizes="100vw"
+          type="image/webp" />
+    {% endfor %}
+    {% for width, sizes in finalImageArray %}
+    <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
+          media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+          data-sizes="100vw" />
+    {% endfor %}
+    <img class="lazyload" src="{{ image.placeholderImage() }}"
+          srcset="{% for variationImage in lastImage %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"
+          {% if alt %}alt="{{ alt }}" {% endif %}/>
+  </picture>
+
+{%- endmacro -%}
