--- a/templates/modules/content/_block-news-events-featured.twig
+++ b/templates/modules/content/_block-news-events-featured.twig
@@ -8,33 +8,17 @@
     {% endif %}
 
     {% if (entry.primaryImage | length) or employeePhotoExists %}
+      {%- import "macros/_images" as imageFunctions -%}
       {% if entry.primaryImage | length %}
         {%- set image = entry.primaryImage.one() -%}
       {% else %}
         {%- set image = entry.employee.one().staffPhoto.one() -%}
       {% endif %}
 
-        <figure class="mobile">
-          <img class="lazyload"
-            src="{{ image.optimizedImagesNewsHeader.placeholderBox() }}"
-            data-sizes="100vw"
-            data-srcset="{{ image.optimizedImagesSquare.srcset() }}"
-            {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
-          {% if image.caption %}
-          <figcaption>{{ image.caption }}</figcaption>
-          {% endif %}
-        </figure>
-
-        <figure class="desktop">
-          <img class="lazyload"
-            src="{{ image.optimizedImagesNewsHeader.placeholderBox() }}"
-            data-sizes="100vw"
-            data-srcset="{{ image.optimizedImagesNewsHeader.srcset() }}"
-            {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
-          {% if image.caption %}
-          <figcaption>{{ image.caption }}</figcaption>
-          {% endif %}
-        </figure>
+      <figure>
+        {{ imageFunctions.responsivePicture(image.optimizedImagesNewsHeader, image.alt) }}
+        {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
+      </figure>
     {% endif %}
 
     <div class="block--news-events--featured-title">
