don't put last in loop

--- a/templates/macros/_images.twig
+++ b/templates/macros/_images.twig
@@ -67,21 +67,25 @@
 
   <picture>
     {% for width, sizes in finalImageArrayWebP %}
-    <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
-          media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-          data-sizes="100vw"
-          type="image/webp" />
-    {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
-          media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-          data-sizes="100vw"
-          type="image/webp" /> #}
+      {% if not loop.last %}
+      <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
+            media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+            data-sizes="100vw"
+            type="image/webp" />
+      {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
+            media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+            data-sizes="100vw"
+            type="image/webp" /> #}
+      {% endif %}
     {% endfor %}
     {% for width, sizes in finalImageArray %}
-    <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
-          media="(min-width: {{ width|replace({'width_': ''}) }}px)" />
-    {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
-          media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-          data-sizes="100vw" /> #}
+      {% if not loop.last %}
+        <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
+              media="(min-width: {{ width|replace({'width_': ''}) }}px)" />
+        {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
+              media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+              data-sizes="100vw" /> #}
+      {% endif %}
     {% endfor %}
     <img class="lazyload" src="{{ image.placeholderImage() }}"
           srcset="{% for variationImage in lastImage %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"
