lazyload and webp tweaks

--- a/src/styles/inc/_media.styl
+++ b/src/styles/inc/_media.styl
@@ -12,6 +12,10 @@ video
   height auto
   width 100%
 
+img[data-sizes="auto"]
+  display block
+  width 100vw
+
 .embed-container:not(.type-rich)
   position: relative
   height: 0
