--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -16,7 +16,7 @@
       overflow hidden
 
       img
-        transition: transform 0.8s ease
+        transition filter 400ms, transform 0.8s ease
 
       &.desktop
         display none
