--- a/templates/macros/_images.twig
+++ b/templates/macros/_images.twig
@@ -31,13 +31,14 @@
     {% set sourceImages = image.optimizedImageUrls %}
     {% set sourceImagesWebP = image.optimizedWebPImageUrls %}
 
+    {# convert the widths from numbers to a string #}
     {% set newSourceWidths = [] %}
     {% for key, width in sourceWidths %}
-      {% set newSourceWidths = newSourceWidths|merge({(key): 'width_' ~ width}) %}
+        {% set newSourceWidths = newSourceWidths|merge({(key): 'width_' ~ width}) %}
     {% endfor %}
 
+    {# find all variant options, group retina sizes inside of variant #}
     {% for width, url in sourceImages %}
-        
         {% set widthKey = newSourceWidths[loop.index0] %}
         {% set newImage = [{'width': width, 'url': url}] %}
         {% if finalImageArray[widthKey] is defined %}
@@ -46,11 +47,10 @@
             {% set subImage = newImage %}
         {% endif %}
         {% set finalImageArray = finalImageArray|merge({(widthKey): subImage}) %}
-        
     {% endfor %}
 
+    {# same as above, just for webp #}
     {% for width, url in sourceImagesWebP %}
-        
         {% set widthKey = newSourceWidths[loop.index0] %}
         {% set newImage = [{'width': width, 'url': url}] %}
         {% if finalImageArrayWebP[widthKey] is defined %}
@@ -59,40 +59,51 @@
             {% set subImage = newImage %}
         {% endif %}
         {% set finalImageArrayWebP = finalImageArrayWebP|merge({(widthKey): subImage}) %}
-        
     {% endfor %}
 
+    {# get the last image in the array for the <img> #}
     {% set lastImage = finalImageArray|last %}
-  {%- endspaceless -%}
 
   <picture>
+    {# Loop through all variants #}
     {% for width, sizes in finalImageArrayWebP %}
       {% if not loop.last %}
-      <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
+      
+      <source
+            {# Loop through all variations inside a variant #}
+            data-srcset="
+              {%- for variationImage in sizes -%}
+                {{ variationImage.url }} {{ variationImage.width }}w{# {% if not loop.first %} {{ loop.index }}x{% endif %} #}{% if not loop.last %}, {% endif %}
+              {%- endfor -%}"       
             media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-            data-sizes="100vw"
+            srcset="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAD8D+JaQAA3AA/uVqAAA="
+            data-sizes="auto"
             type="image/webp" />
-      {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
-            media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-            data-sizes="100vw"
-            type="image/webp" /> #}
       {% endif %}
     {% endfor %}
     {% for width, sizes in finalImageArray %}
       {% if not loop.last %}
-        <source srcset="{% for variationImage in sizes %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"       
-              media="(min-width: {{ width|replace({'width_': ''}) }}px)" />
-        {# <source srcset="{% for variationImage in sizes %}{{ variationImage.url }} {{ variationImage.width }}w{% if not loop.last %}, {% endif %}{% endfor %}"       
-              media="(min-width: {{ width|replace({'width_': ''}) }}px)"
-              data-sizes="100vw" /> #}
+        <source
+            {# Loop through all variations inside a variant #}
+            data-srcset="
+              {%- for variationImage in sizes -%}
+                {{ variationImage.url }} {{ variationImage.width }}w{# {% if not loop.first %} {{ loop.index }}x{% endif %} #}{% if not loop.last %}, {% endif %}
+              {%- endfor -%}"       
+            media="(min-width: {{ width|replace({'width_': ''}) }}px)"
+            srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+            data-sizes="auto" />
       {% endif %}
     {% endfor %}
-    <img class="lazyload" src="{{ image.placeholderImage() }}"
-          srcset="{% for variationImage in lastImage %}{{ variationImage.url }}{% if not loop.first %} {{ loop.index }}x{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"
+    <img class="lazyload"
+          {# options: placeholderSilhouette(), placeholderBox() or placeholderImage() #}
+          src="{{ image.placeholderImage() }}"
+          srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+          {# Loop through all variations inside a variant #}
+          data-srcset="
+            {%- for variationImage in lastImage -%}
+              {{ variationImage.url }} {{ variationImage.width }}w{# {% if not loop.first %} {{ loop.index }}x{% endif %} #}{% if not loop.last %}, {% endif %}
+            {%- endfor -%}"
           {% if alt %}alt="{{ alt }}" {% endif %}/>
-    {# <img class="lazyload" src="{{ image.placeholderImage() }}"
-          srcset="{% for variationImage in lastImage %}{{ variationImage.url }}{% if not loop.first %} {{ variationImage.width }}w{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}"
-          {% if alt %}alt="{{ alt }}" {% endif %}/> #}
   </picture>
-
+  {%- endspaceless -%}
 {%- endmacro -%}
