--- a/src/styles/modules/_main-menu.styl
+++ b/src/styles/modules/_main-menu.styl
@@ -15,10 +15,7 @@
     height: $top-menu-height-desktop
     max-height: $top-menu-height-desktop
 
-  // background: $top-menu-background-color
-  // background: rgba($top-menu-background-color,0.8)
-  // user-select: none
-  // backdrop-filter: saturate(180%) blur(20px)
+  background: $top-menu-background-color
 
   &::before
     background: embedurl("../images/banner.svg", "utf8") no-repeat 50% 50%/105% auto
