--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -10,7 +10,7 @@
     background-color $module-subpages-background-color
     box-shadow $module-subpages-box-shadow
     text-decoration $module-subpages-link-decoration
-    transition: box-shadow 200ms ease-out
+    transition: box-shadow $transition-timing
 
   h3
     color $module-subpages-link-color
