--- a/src/styles/modules/_block-weather-tip.styl
+++ b/src/styles/modules/_block-weather-tip.styl
@@ -30,7 +30,7 @@
       height rem(18.5px)
       width rem(29px)
       margin-right: .5rem
-      transition: background-color 200ms ease-out
+      transition: background-color $transition-timing
       vertical-align text-bottom
       mask: embedurl("../sprites/weather.svg", "utf8") no-repeat 50% 50%/100% auto
 
