--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -53,7 +53,7 @@
         display block
         height rem(16.5px)
         width rem(16.5px)
-        transition: background-color 200ms ease-out
+        transition: background-color $transition-timing
         mask: embedurl("../sprites/arrow-down.svg", "utf8") no-repeat 50% 50%/16.5px 16.5px
         z-index 5
         +above(m)
