--- a/src/styles/modules/_main-menu.styl
+++ b/src/styles/modules/_main-menu.styl
@@ -114,6 +114,11 @@
       width: rem(32.5px)
   .menuicon-bread
     fill: $top-menu-toggle-icon-color
+    transition: fill $transition-timing
+  
+  &:hover
+    .menuicon-bread
+      fill: $top-menu-toggle-icon-color-hover
 
 .menu--side--toggleanchor
   left: 0
