--- a/src/styles/site/_article.styl
+++ b/src/styles/site/_article.styl
@@ -38,7 +38,7 @@ main .news-events-article
           height ($header-text-size * .75)
           width ($header-text-size * .75)
 
-          transition: background-color 200ms ease-out
+          transition: background-color $transition-timing
           vertical-align middle
           mask: embedurl("../sprites/share.svg", "utf8") no-repeat 50% 50%/100% auto
         > i
