--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -35,7 +35,7 @@
     color: $content-link-color
     font-weight: $content-link-weight
     text-decoration: $content-link-decoration
-    transition: $link-transition, text-decoration 200ms ease-out
+    transition: $link-transition, text-decoration $transition-timing
     &:active
     &:focus
     &:link
