--- a/src/styles/inc/_forms.styl
+++ b/src/styles/inc/_forms.styl
@@ -292,7 +292,7 @@ input[type="checkbox"]
       opacity 0
       position absolute
       background-color: $white
-      transition: opacity 200ms ease-out
+      transition: opacity $transition-timing
       vertical-align middle
   &:checked
     & + label::after
@@ -405,7 +405,7 @@ input[type=file]
       height $input-height-base
       width ($padding-base-horizontal * 2)
       background-color: $medium-gray
-      transition: all 200ms ease-out
+      transition: all $transition-timing
       vertical-align middle
       z-index: 1
 
