--- a/src/styles/modules/_block-news-events-preview.styl
+++ b/src/styles/modules/_block-news-events-preview.styl
@@ -4,7 +4,7 @@
     background-color $module-news-events-preview-background-color
     box-shadow $module-news-events-preview-box-shadow
     text-decoration none
-    transition: box-shadow 200ms ease-out
+    transition: box-shadow $transition-timing
     padding-bottom rem(28px)
 
     +above(m)
