--- a/src/styles/modules/_block-process.styl
+++ b/src/styles/modules/_block-process.styl
@@ -46,7 +46,7 @@
           fill $module-process-logo-hover-color
     svg g
       fill $module-process-logo-color
-      transition: fill 200ms ease-out
+      transition: fill $transition-timing
 
   +above(m)
     display: flex
