--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -21,7 +21,7 @@
       width rem(16px)
       mask: embedurl("../sprites/arrow-angle.svg", "utf8") no-repeat 50% 50%/12px 12px
       margin-right: 0.35em
-      transition: background-color 200ms ease-out
+      transition: background-color $transition-timing
       vertical-align middle
 
   ul
@@ -77,7 +77,7 @@ aside #block--quick-links
       width rem(16px)
       mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
       margin-left: 0.15em
-      transition: background-color 200ms ease-out, transform 200ms ease-out
+      transition: background-color $transition-timing, transform $transition-timing
       vertical-align middle
 
     &:hover
