--- a/templates/structure/pages/_types/_landing.twig
+++ b/templates/structure/pages/_types/_landing.twig
@@ -15,6 +15,14 @@
 
 <section id="landing--subpages">
   <div class="inside">
+
+    {# Custom Navigation for landing page #}
+    {% if craft.app.request.segments | first == 'government' %}
+      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('departmentsLanding').all()|first } %}
+      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('boardsLanding').all()|first } %}
+      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('minutesAgendasLanding').all()|first } %}
+    {% endif %}
+
     {% set pages = craft.entries({
         'section' : 'pages',
         'level' : 2,
